fixed transition on small screens

--- a/src/colorbox.css
+++ b/src/colorbox.css
@@ -32,6 +32,7 @@
   position: absolute;
   top: 50%;
   left: 50%;
+  
   text-align: center;
   margin-left: -15%;
   margin-top: -5%;
@@ -50,14 +51,20 @@
   opacity: 0;
   width: 100%;
   height: 100%;
-
+  transform: scale(0);
   box-sizing: border-box;
-  transition: transform 0.5s ease-in-out;
+ 
 }
 .copy-overlay.show {
-  position: absolute;
+  position: fixed;
+  top:0;
+  left: 0;
+  right: 0;
+  bottom: 0;
   opacity: 1;
-  transform: scale(10);
+  transform: scale(1);
+  
+  transition: transform 0.5s ease-in-out;
   z-index: 10;
   overflow: hidden;
 }
@@ -75,15 +82,14 @@
   width: 100%; */
 
   justify-content: center;
-  transform: scale(0.1);
+  transform: scale(0);
 }
 .copy-overlay-content.show {
   opacity: 1;
   transform: scale(1);
   z-index: 20;
   font-size: 1.5em;
-  transition: opacity, transform 0.4s;
-  transition-delay: 0.2s;
+  transition: opacity, transform 0.25s 0.25s;
 }
 .copy-overlay-content h1 {
   width: 100%;
