--- a/src/palette.css
+++ b/src/palette.css
@@ -10,23 +10,27 @@
 }
 
 .format-change {
-  opacity: 0;
-  width: 10%;
-  height: 10%;
-
-  background-color: #63ffd3;
   position: absolute;
-  top: 50%;
-  left: 50%;
+  top: 0;
+  right: 0;
+  opacity: 0;
+
+  transform: scale(0);
+  background-color: #63ffd3;
+  margin: 20% auto;
 }
 .format-change.show {
-  transition: width, height, transform;
-  transition-duration: 1s;
+  margin: 0;
+  transition: transform;
+  transition-duration: 0.5s;
   transition-timing-function: ease-in-out;
   opacity: 1;
-  width: 100%;
-  height: 100%;
-  transform: scale(20);
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  transform: scale(1);
   z-index: 30;
 }
 
